Added get to html page